@@ -411,7 +411,8 @@ def update(update_keys=True, base=None):
         bib.doi for bib in bibs
         if bib.bibcode is not None and not bib.freeze]
     # Query-replace:
-    bibs = add_bibtex(bibcodes, keys, eprints, dois, update_keys, base=base)
+    bibs = add_bibtex(
+        bibcodes, keys, eprints, dois, update_keys, base)
     return bibs
 
 
